--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,18 +3,18 @@
   "short_name": "example",
   "icons": [
     {
-      "src": "/example/static/img/icons/android-chrome-192x192.png",
+      "src": "/vue-example-project/static/img/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/example/static/img/icons/android-chrome-512x512.png",
+      "src": "/vue-example-project/static/img/icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "start_url": "/example/#/",
-  "scope": "/example/",
+  "scope": "/vue-example-project/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#4DBA87"
