--- a/static/manifest.json
+++ b/static/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/example/#/",
+  "start_url": "/vue-example-project/#/",
   "scope": "/vue-example-project/",
   "display": "standalone",
   "background_color": "#000000",
